--- a/Malmö högskola/inlamning3.html
+++ b/Malmö högskola/inlamning3.html
@@ -8,11 +8,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono:100,200,300,400,500,600" rel="stylesheet">
 </head>
 <body>
-	<a style="text-decoration: none;" href="/index.html">
+	<a href="/index.html" style="text-decoration: none;">
 	<header>
 		<h1 id="headerh1">tbdevstuff</h1>
-	</header>
-	</a>
+	</header></a>
 	<div id="links">
 		<div class="navigation" id="i1">
 			<h2><a class="url" href="/inlamning1.html">Inlämning 1</a></h2>
@@ -31,7 +30,83 @@
 		</div>
 	</div>
 	<div id="main">
-	<h3>Inlämning 3 - Formulär</h3>
+		<h3>Inlämning 3 - Formulär</h3>
+	</div>
+	<div>
+		<form>
+			<fieldset>
+				<legend>Kontaktuppgifter</legend>
+				<div>
+					<label for="fName">Namn:</label> <input name="name" id="fName" placeholder="Ange namn här..." required="required" type="text">
+				</div>
+				<div>
+					<label for="age">Ålder:</label> <input name="age" id="age" placeholder="Ange ålder här..." required="required" type="text">
+				</div>
+			</fieldset>
+			<fieldset>
+				<legend>Dina besök på Blomstermålabladet</legend> <label id="testID" class="mainLabel">Hur ofta besöker du blomstermålabladet?</label>
+				<div>
+					<input id="everyDay" name="freq" type="radio" value="text"> <label for="everyDay">Varje dag</label> 
+				</div>
+				<div>
+					<input id="everyOtherDay" name="freq" type="radio" value="text"> <label for="everyOtherDay">Varannan dag</label>
+				</div>
+				<div>
+					<input id="everyWeek" name="freq" type="radio" value="text"> <label for="everyWeek">Varje vecka</label>
+				</div><label class="mainLabel">Vilka delar av blomstermålabladet brukar du besöka?</label>
+				<div>
+					<input id="news" name="visits" type="checkbox"> <label for="news">Nyheter</label>
+				</div>
+				<div>
+					<input id="foreign" name="visits" type="checkbox"> <label for="foreign">Utrikes</label>
+				</div>
+				<div>
+					<input id="domestic" name="visits" type="checkbox"> <label for="domestic">Inrikes</label>
+				</div>
+				<div>
+					<input id="sport" name="visits" type="checkbox"> <label for="sport">Sport</label>
+				</div>
+				<div>
+					<input id="gossip" name="visits" type="checkbox"> <label for="gossip">Skvaller</label>
+				</div>
+				<div>
+					<input id="weather" name="visits" type="checkbox"> <label for="weather">Väder</label>
+				</div>
+				<div>
+					<input id="other" name="visits" type="checkbox"> <label for="other">Övrigt</label>
+				</div>
+			</fieldset>
+			<fieldset>
+				<legend>Vinn en T-shirt!</legend>
+				<div>
+					<label class="mainLabel">Ni har möjlighet att vinna en T-shirt om ni fyller i följande information:</label>
+					<div>
+						<label class="mainLabel" for="best">Bästa med blomstermålabladet:</label> <input name="best" id="best" type="text">
+					</div>
+					<div>
+						<label for="worst">Sämsta med blomstermålabladet:</label> <input name="worst" id="worst" type="text">
+					</div>
+					<div>
+						<label for="email">Epost:</label><input type="text" name="email" id="email" placeholder="t.ex. anton@mah.se">
+					</div>
+					<div>
+						<label for="size">Storlek:</label>
+						<select id="size" name="size">
+							<option value="S">S</option>
+						  	<option value="M">M</option>
+						  	<option value="L">L</option>
+						</select>
+					</div>
+				</div>
+			</fieldset>
+			<fieldset>
+				<legend>Skicka/Återställ</legend>
+				<div>
+					<input type="submit" formaction="http://webshare.mah.se/tszagh/response.php" formmethod="GET" value="Skicka"/>
+					<input type="reset" value="Återställ formulär" style="margin-left: 10px"/>
+				</div>
+			</fieldset>
+		</form>
 	</div>
 	<footer>
 		<p>I'm a fancy footer. © FakeCompanyAB</p>
