--- a/Malmö högskola/Inlamning2.html
+++ b/Malmö högskola/Inlamning2.html
@@ -1,35 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Tarek Bermalm - Devstuff</title>
-	<link href="design.css" rel="stylesheet" type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Fira+Mono:100,200,300,400,500,600" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Tarek Bermalm - Devstuff</title>
+  <link href="design.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Mono:100,200,300,400,500,600" rel="stylesheet">
 </head>
 <body>
-	<a style="text-decoration: none;" href="/index.html">
-	<header>
-		<h1 id="headerh1">tbdevstuff</h1>
-	</header>
-	</a>
-	<div id="links">
-		<div class="navigation" id="i1">
-			<h2><a class="url" href="/inlamning1.html">Inlämning 1</a></h2>
-		</div>
-		<div class="navigation" id="i1_2">
-			<h2><a class="url" href="/Inlamning1_Del2.html">Inlämning 1 - Del 2</a></h2>
-		</div>
-		<div class="navigation" id="i2">
-			<h2><a class="url" href="/inlamning2.html">Inlämning 2</a></h2>
-		</div>
-		<div class="navigation" id="i3">
-			<h2><a class="url" href="/inlamning3.html">Inlämning 3</a></h2>
-		</div>
-		<div class="navigation" id="i4">
-			<h2><a class="url" href="/inlamning4.html">Inlämning 4</a></h2>
-		</div>
-	</div>
+  <a href="/index.html" style="text-decoration: none;">
+  <header>
+    <h1 id="headerh1">tbdevstuff</h1>
+  </header></a>
+  <div class="navbar">
+    <div class="dropdown">
+      <button class="dropbtn">Projects <label style="font-size: 15px;">▼</label></button>
+      <div class="dropdown-content">
+        <a href="/inlamning1.html">Inlämning 1</a>
+        <a href="/Inlamning1_Del2.html">Inlämning 1 - Del 2</a>
+        <a href="/inlamning2.html">Inlämning 2</a>
+        <a href="/inlamning3.html">Inlämning 3</a>
+        <a href="/inlamning4.html">Inlämning 4</a>
+      </div>
+    </div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
+  </div>
 	<div id="main">
 		<h3>Inlämning 2 - Tabeller</h3>
 		 <table>
