--- a/Malmö högskola/contact.html
+++ b/Malmö högskola/contact.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Tarek Bermalm - Devstuff</title>
-	<link href="design_test.css" rel="stylesheet" type="text/css">
+	<link href="design.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono:100,200,300,400,500,600" rel="stylesheet">
 </head>
@@ -24,8 +24,8 @@
 			</div>
 		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
-	<div id="home">
-		<h3 id="homeh3">HOME</h3>
+	<div id="main">
+		<h3>Contact</h3>
 	</div>
 	<footer>
 		<p>I'm a fancy footer. © FakeCompanyAB</p>
