--- a/Malmö högskola/inlamning3.html
+++ b/Malmö högskola/inlamning3.html
@@ -12,22 +12,17 @@
 	<header>
 		<h1 id="headerh1">tbdevstuff</h1>
 	</header></a>
-	<div id="links">
-		<div class="navigation" id="i1">
-			<h2><a class="url" href="/inlamning1.html">Inlämning 1</a></h2>
-		</div>
-		<div class="navigation" id="i1_2">
-			<h2><a class="url" href="/Inlamning1_Del2.html">Inlämning 1 - Del 2</a></h2>
-		</div>
-		<div class="navigation" id="i2">
-			<h2><a class="url" href="/inlamning2.html">Inlämning 2</a></h2>
-		</div>
-		<div class="navigation" id="i3">
-			<h2><a class="url" href="/inlamning3.html">Inlämning 3</a></h2>
-		</div>
-		<div class="navigation" id="i4">
-			<h2><a class="url" href="/inlamning4.html">Inlämning 4</a></h2>
-		</div>
+	<div class="navbar">
+		<div class="dropdown">
+			<button class="dropbtn">Projects <label style="font-size: 15px;">▼</label></button>
+			<div class="dropdown-content">
+				<a href="/inlamning1.html">Inlämning 1</a>
+				<a href="/Inlamning1_Del2.html">Inlämning 1 - Del 2</a>
+				<a href="/inlamning2.html">Inlämning 2</a>
+				<a href="/inlamning3.html">Inlämning 3</a>
+				<a href="/inlamning4.html">Inlämning 4</a>
+			</div>
+		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
 	<div id="main">
 		<h3>Inlämning 3 - Formulär</h3>
@@ -37,16 +32,16 @@
 			<fieldset>
 				<legend>Kontaktuppgifter</legend>
 				<div>
-					<label for="fName">Namn:</label> <input name="name" id="fName" placeholder="Ange namn här..." required="required" type="text">
+					<label for="fName">Namn:</label> <input id="fName" name="name" placeholder="Ange namn här..." required="required" type="text">
 				</div>
 				<div>
-					<label for="age">Ålder:</label> <input name="age" id="age" placeholder="Ange ålder här..." required="required" type="text">
+					<label for="age">Ålder:</label> <input id="age" name="age" placeholder="Ange ålder här..." required="required" type="text">
 				</div>
 			</fieldset>
 			<fieldset>
-				<legend>Dina besök på Blomstermålabladet</legend> <label id="testID" class="mainLabel">Hur ofta besöker du blomstermålabladet?</label>
+				<legend>Dina besök på Blomstermålabladet</legend> <label class="mainLabel" id="testID">Hur ofta besöker du blomstermålabladet?</label>
 				<div>
-					<input id="everyDay" name="freq" type="radio" value="text"> <label for="everyDay">Varje dag</label> 
+					<input id="everyDay" name="freq" type="radio" value="text" required checked> <label for="everyDay">Varje dag</label>
 				</div>
 				<div>
 					<input id="everyOtherDay" name="freq" type="radio" value="text"> <label for="everyOtherDay">Varannan dag</label>
@@ -81,20 +76,25 @@
 				<div>
 					<label class="mainLabel">Ni har möjlighet att vinna en T-shirt om ni fyller i följande information:</label>
 					<div>
-						<label class="mainLabel" for="best">Bästa med blomstermålabladet:</label> <input name="best" id="best" type="text">
+						<label class="mainLabel" for="best">Bästa med blomstermålabladet:</label> <input id="best" name="best" type="text">
 					</div>
 					<div>
-						<label for="worst">Sämsta med blomstermålabladet:</label> <input name="worst" id="worst" type="text">
+						<label for="worst">Sämsta med blomstermålabladet:</label> <input id="worst" name="worst" type="text">
 					</div>
 					<div>
-						<label for="email">Epost:</label><input type="text" name="email" id="email" placeholder="t.ex. anton@mah.se">
+						<label for="email">Epost:</label><input id="email" name="email" placeholder="t.ex. anton@mah.se" type="text">
 					</div>
 					<div>
-						<label for="size">Storlek:</label>
-						<select id="size" name="size">
-							<option value="S">S</option>
-						  	<option value="M">M</option>
-						  	<option value="L">L</option>
+						<label for="size">Storlek:</label> <select id="size" name="size">
+							<option value="S">
+								S
+							</option>
+							<option value="M">
+								M
+							</option>
+							<option value="L">
+								L
+							</option>
 						</select>
 					</div>
 				</div>
@@ -102,8 +102,7 @@
 			<fieldset>
 				<legend>Skicka/Återställ</legend>
 				<div>
-					<input type="submit" formaction="http://webshare.mah.se/tszagh/response.php" formmethod="GET" value="Skicka"/>
-					<input type="reset" value="Återställ formulär" style="margin-left: 10px"/>
+					<input formaction="http://webshare.mah.se/tszagh/response.php" formmethod="GET" type="submit" value="Skicka"> <input style="margin-left: 10px" type="reset" value="Återställ formulär">
 				</div>
 			</fieldset>
 		</form>
