--- a/Malmö högskola/Inlamning1.html
+++ b/Malmö högskola/Inlamning1.html
@@ -25,10 +25,11 @@
 		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
 	<div id="main">
-		<h3>Inlämning 1 - Intro</h3>
+		<h1>Inlämning 1</h1>
+		<h2>Intro</h2>
 		<p>Jag läser systemvetenskap på Lunds Universitet, och vill lära mig mer kunskaper inom it och programmering. Jag har alltid ansett att webbutveckling är ett extremet användbart verktyg, <em>därför vill jag lära mig <strong>webbutveckling</strong></em>. Jag tycker om att sporta, umgås med vänner och spendera för mycket tid framför datorn, fickdatorn eller den förstorade fickdatorn.</p>
-		<h4>Ett par listor</h4>
-		<h5>Ord</h5>
+		<h3>Ett par listor</h3>
+		<h4>Ord</h4>
 		Jag är väldigt språkintresserad. Detta är ett gäng ord som jag upplever märkvärda. <img alt="Bild på mig och vänner" height="480" src="https://instagram.fbma2-1.fna.fbcdn.net/v/t51.2885-15/e15/c0.90.720.720a/s640x640/62473827_124627555425927_6499804860709353593_n.jpg?_nc_ht=instagram.fbma2-1.fna.fbcdn.net&_nc_cat=103&_nc_ohc=PujZArsA1wIAX_ucdrs&oh=73c56caaddce36b4d03cd0460f40315e&oe=5ED87879" 
 		style="float:right; padding-right: 20px; padding-bottom: 20px;" width="480">
 		<ul>
