--- a/Malmö högskola/inlamning4.html
+++ b/Malmö högskola/inlamning4.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono:100,200,300,400,500,600" rel="stylesheet">
 </head>
-<body>
+<body class="inlamning4">
 	<a href="/index.html" style="text-decoration: none;">
 	<header>
 		<h1 id="headerh1">tbdevstuff</h1>
@@ -25,35 +25,34 @@
 		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
 	<div id="main">
-		<h3>Inlämning 4 - CSS</h3>
-		<p>Jag läser systemvetenskap på Lunds Universitet, och vill lära mig mer kunskaper inom it och programmering. Jag har alltid ansett att webbutveckling är ett extremet användbart verktyg, <em>därför vill jag lära mig <strong>webbutveckling</strong></em>. Jag tycker om att sporta, umgås med vänner och spendera för mycket tid framför datorn, fickdatorn eller den förstorade fickdatorn.</p>
-		<p>
-			<h4>Ett par listor</h2>
-			<h5>Ord</h3>
-			Jag är väldigt språkintresserad. Detta är ett gäng ord som jag upplever märkvärda. <img alt="Bild på mig och vänner" height="480" src="https://instagram.fbma2-1.fna.fbcdn.net/v/t51.2885-15/e15/c0.90.720.720a/s640x640/62473827_124627555425927_6499804860709353593_n.jpg?_nc_ht=instagram.fbma2-1.fna.fbcdn.net&_nc_cat=103&_nc_ohc=PujZArsA1wIAX_ucdrs&oh=73c56caaddce36b4d03cd0460f40315e&oe=5ED87879" 
-			style="float:right; padding-right: 20px; padding-bottom: 20px;" width="480">
-			<ul>
-				<li>Spricka</li>
-				<li>Dog</li>
-				<li>
-					<a href="https://www.wikiwand.com/en/Mbabaram_language">Mbabaram</a>
-				</li>
-				<li>Ominous</li>
-				<li>Pick</li>
-			</ul>
-			<h4>Personer</h3>Säger sig självt.
-			<ol>
-				<li>Mor</li>
-				<li>Jag</li>
-				<li>Mig</li>
-				<li><a href="mailto:billgates@icloud.com.com?Subject=Hi" target="_top" title="Mailen är påhittad. Skicka ej mail. Bör endast användas i demonstrationsändamål.">Bill Gates</a>
+		<h1>Inlämning 1</h1>
+		<h2>Intro</h2>
+		<div class="textBody">
+			<p>Jag läser systemvetenskap på Lunds Universitet, och vill lära mig mer kunskaper inom it och programmering. Jag har alltid ansett att webbutveckling är ett extremet användbart verktyg, <em>därför vill jag lära mig <strong>webbutveckling</strong></em>. Jag tycker om att sporta, umgås med vänner och spendera för mycket tid framför datorn, fickdatorn eller den förstorade fickdatorn.</p>
+		</div>
+		<img alt="Bild på mig och vänner" id="img" src="https://instagram.fbma2-1.fna.fbcdn.net/v/t51.2885-15/e15/c0.90.720.720a/s640x640/62473827_124627555425927_6499804860709353593_n.jpg?_nc_ht=instagram.fbma2-1.fna.fbcdn.net&_nc_cat=103&_nc_ohc=PujZArsA1wIAX_ucdrs&oh=73c56caaddce36b4d03cd0460f40315e&oe=5ED87879"><label id="imgLabel" for="img">Förresten, bilden anpassar sig automatiskt till storleken på ditt fönster...</label>
+		<h3>Ett par listor</h3>
+		<h4>Ord</h4>
+		Jag är väldigt språkintresserad. Detta är ett gäng ord som jag upplever märkvärda.
+		<ul>
+			<li>Spricka</li>
+			<li>Dog</li>
+			<li><a href="https://www.wikiwand.com/en/Mbabaram_language">Mbabaram</a></li>
+			<li>Ominous</li>
+			<li>Pick</li>
+		</ul>
+		<h4>Personer</h4>Säger sig självt.
+		<ol>
+			<li>Mor</li>
+			<li>Jag</li>
+			<li>Mig</li>
+			<li><a href="mailto:billgates@icloud.com.com?Subject=Hi" target="_top" title="Mailen är påhittad. Skicka ej mail. Bör endast användas i demonstrationsändamål.">Bill Gates</a></li>
 					<!--
              	   E-postadressen är inte bekräftad, utan helt påhittad. 
              	   I och med att adressen möjligtvis finns och används uppmanas INTE att mail skickas till e-postadressen.
              	   'title'-attributet har används för att tydliggöra detta.
-             	   --></li>
-			</ol>
-		</p>
+             	   -->
+		</ol>
 	</div>
 	<footer>
 		<p>I'm a fancy footer. © FakeCompanyAB</p>
