--- a/Malmö högskola/Inlamning1.html
+++ b/Malmö högskola/Inlamning1.html
@@ -27,10 +27,10 @@
 	<div id="main">
 		<h1>Inlämning 1</h1>
 		<h2>Intro</h2>
-		<p>Jag läser systemvetenskap på Lunds Universitet, och vill lära mig mer kunskaper inom it och programmering. Jag har alltid ansett att webbutveckling är ett extremet användbart verktyg, <em>därför vill jag lära mig <strong>webbutveckling</strong></em>. Jag tycker om att sporta, umgås med vänner och spendera för mycket tid framför datorn, fickdatorn eller den förstorade fickdatorn.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <em>Excepteur sint occaecat cupidatat <strong>non proident</strong></em>, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		<h3>Ett par listor</h3>
 		<h4>Ord</h4>
-		Jag är väldigt språkintresserad. Detta är ett gäng ord som jag upplever märkvärda. <img alt="Bild på mig och vänner" height="480" src="https://instagram.fbma2-1.fna.fbcdn.net/v/t51.2885-15/e15/c0.90.720.720a/s640x640/62473827_124627555425927_6499804860709353593_n.jpg?_nc_ht=instagram.fbma2-1.fna.fbcdn.net&_nc_cat=103&_nc_ohc=PujZArsA1wIAX_ucdrs&oh=73c56caaddce36b4d03cd0460f40315e&oe=5ED87879" 
+		Lorem ipsum dolor sit amet. <img alt="Bild på mig och vänner" height="480" src="https://instagram.fbma2-1.fna.fbcdn.net/v/t51.2885-15/e15/c0.90.720.720a/s640x640/62473827_124627555425927_6499804860709353593_n.jpg?_nc_ht=instagram.fbma2-1.fna.fbcdn.net&_nc_cat=103&_nc_ohc=PujZArsA1wIAX_ucdrs&oh=73c56caaddce36b4d03cd0460f40315e&oe=5ED87879" 
 		style="float:right; padding-right: 20px; padding-bottom: 20px;" width="480">
 		<ul>
 			<li>Spricka</li>
@@ -39,7 +39,7 @@
 			<li>Ominous</li>
 			<li>Pick</li>
 		</ul>
-		<h4>Personer</h4>Säger sig självt.
+		<h4>Personer</h4>
 		<ol>
 			<li>Mor</li>
 			<li>Jag</li>
