--- a/Malmö högskola/inlamning4.html
+++ b/Malmö högskola/inlamning4.html
@@ -24,16 +24,21 @@
 			</div>
 		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
+	<div class="navbarSecondary">
+	 	<a href="/inlamning4.html"><div>Sida 1</div></a>
+		<a href="/inlamning4_sida2.html"><div>Sida 2</div></a>
+		<a href="/inlamning4_sida3.html"><div>Sida 3</div></a>
+	</div>
 	<div id="main">
 		<h1>Inlämning 1</h1>
 		<h2>Intro</h2>
 		<div class="textBody">
-			<p>Jag läser systemvetenskap på Lunds Universitet, och vill lära mig mer kunskaper inom it och programmering. Jag har alltid ansett att webbutveckling är ett extremet användbart verktyg, <em>därför vill jag lära mig <strong>webbutveckling</strong></em>. Jag tycker om att sporta, umgås med vänner och spendera för mycket tid framför datorn, fickdatorn eller den förstorade fickdatorn.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <em>Excepteur sint occaecat cupidatat <strong>non proident</strong></em>, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</div>
 		<img alt="Bild på mig och vänner" id="img" src="https://instagram.fbma2-1.fna.fbcdn.net/v/t51.2885-15/e15/c0.90.720.720a/s640x640/62473827_124627555425927_6499804860709353593_n.jpg?_nc_ht=instagram.fbma2-1.fna.fbcdn.net&_nc_cat=103&_nc_ohc=PujZArsA1wIAX_ucdrs&oh=73c56caaddce36b4d03cd0460f40315e&oe=5ED87879"><label id="imgLabel" for="img">Förresten, bilden anpassar sig automatiskt till storleken på ditt fönster...</label>
 		<h3>Ett par listor</h3>
 		<h4>Ord</h4>
-		Jag är väldigt språkintresserad. Detta är ett gäng ord som jag upplever märkvärda.
+		Lorem ipsum dolor sit amet.
 		<ul>
 			<li>Spricka</li>
 			<li>Dog</li>
@@ -41,7 +46,7 @@
 			<li>Ominous</li>
 			<li>Pick</li>
 		</ul>
-		<h4>Personer</h4>Säger sig självt.
+		<h4>Personer</h4>
 		<ol>
 			<li>Mor</li>
 			<li>Jag</li>
