--- a/Malmö högskola/inlamning4_sida3.html
+++ b/Malmö högskola/inlamning4_sida3.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono:100,200,300,400,500,600" rel="stylesheet">
 </head>
-<body class="inlamning4">
+<body>
 	<a href="/index.html" style="text-decoration: none;">
 	<header>
 		<h1 id="headerh1">tbdevstuff</h1>
