--- a/Malmö högskola/index.html
+++ b/Malmö högskola/index.html
@@ -22,7 +22,6 @@
 				<a href="/inlamning3.html">Inlämning 3</a>
 				<a href="/inlamning4.html">Inlämning 4</a>
 				<a href="/inlamning5.html">Inlämning 5</a>
-				<a href="/inlamning6.html">Inlämning 6</a>
 			</div>
 		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
@@ -34,3 +33,4 @@
 	</footer>
 </body>
 </html>
+<!--<a href="/inlamning6.html">Inlämning 6</a>
