--- a/Malmö högskola/index.html
+++ b/Malmö högskola/index.html
@@ -22,6 +22,7 @@
 				<a href="/inlamning3.html">Inlämning 3</a>
 				<a href="/inlamning4.html">Inlämning 4</a>
 				<a href="/inlamning5.html">Inlämning 5</a>
+				<a href="/inlamning6.html">Inlämning 6</a>
 			</div>
 		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
@@ -33,4 +34,3 @@
 	</footer>
 </body>
 </html>
-<!--<a href="/inlamning6.html">Inlämning 6</a>
