--- a/Malmö högskola/Inlamning1.html
+++ b/Malmö högskola/Inlamning1.html
@@ -21,6 +21,8 @@
 				<a href="/inlamning2.html">Inlämning 2</a>
 				<a href="/inlamning3.html">Inlämning 3</a>
 				<a href="/inlamning4.html">Inlämning 4</a>
+				<a href="/inlamning5.html">Inlämning 5</a>
+				<a href="/inlamning6.html">Inlämning 6</a>
 			</div>
 		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
