--- a/Malmö högskola/inlamning5.html
+++ b/Malmö högskola/inlamning5.html
@@ -17,7 +17,7 @@
 			<li>AK6336</li>
 		</ul>
 	</header></a>
-	<div class="navbar">
+	<nav class="navbar">
 		<div class="dropdown">
 			<button class="dropbtn">Projects <label style="font-size: 15px;">▼</label></button>
 			<div class="dropdown-content">
@@ -30,7 +30,7 @@
 				<a href="/inlamning6.html">Inlämning 6</a>
 			</div>
 		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
-	</div>
+	</nav>
 	<div id="home">
 		<h3 id="homeh3">HOME</h3>
 	</div>
