--- a/Malmö högskola/inlamning5.html
+++ b/Malmö högskola/inlamning5.html
@@ -7,33 +7,25 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono:100,200,300,400,500,600" rel="stylesheet">
 </head>
-<body>
+<body class="inlamning5">
 	<a href="/index.html" style="text-decoration: none;">
-	<header class="inlamning5">
-		<div></div>
+	<header>
 		<h1 id="headerh1">tbdevstuff</h1>
 		<ul>
 			<li>Inlämningsuppgift 5</li>
 			<li>Tarek Bermalm</li>
 			<li>AK6336</li>
 		</ul>
-	</header></a>
+	</header>
+	</a>
 	<nav class="navbar">
-		<div class="dropdown">
-			<button class="dropbtn">Projects <label style="font-size: 15px;">▼</label></button>
-			<div class="dropdown-content">
-				<a href="/inlamning1.html">Inlämning 1</a>
-				<a href="/Inlamning1_Del2.html">Inlämning 1 - Del 2</a>
-				<a href="/inlamning2.html">Inlämning 2</a>
-				<a href="/inlamning3.html">Inlämning 3</a>
-				<a href="/inlamning4.html">Inlämning 4</a>
-				<a href="/inlamning5.html">Inlämning 5</a>
-				<a href="/inlamning6.html">Inlämning 6</a>
-			</div>
-		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
+		<a href="/inlamning5_startsida.html">Start</a>
+		<a href="/inlamning4_sida3.html">Om mig</a>
+		<a href="/Inlamning4_sida2.html">Om CSS</a>
+		<a href="/contact.html">Övrigt</a>
 	</nav>
-	<div id="home">
-		<h3 id="homeh3">HOME</h3>
+	<div>
+	
 	</div>
 	<footer>
 		<p>Senast uppdaterad: 2020-03-05</p>
