--- a/Malmö högskola/inlamning3.html
+++ b/Malmö högskola/inlamning3.html
@@ -32,7 +32,7 @@
 			<fieldset>
 				<legend>Kontaktuppgifter</legend>
 				<div>
-					<label for="age">Namn:</label> <input id="name" name="name" placeholder="Ange namn här..." required="required" type="text">
+					<label for="name">Namn:</label> <input id="name" name="name" placeholder="Ange namn här..." required="required" type="text">
 				</div>
 				<div>
 					<label for="age">Ålder:</label> <input id="age" name="age" placeholder="Ange ålder här..." required="required" type="text">
