--- a/Malmö högskola/inlamning5.html
+++ b/Malmö högskola/inlamning5.html
@@ -36,9 +36,14 @@
 			Om man använder sig av en extern stillmall så behöver man som sagt ange en selektor. Det ända du behöver för att denna selektor ska kunna vara aktuell för en HTML-fil är att ange en referens till CSS-filen. Då kommer automatiskt alla ändringar att tillämpas, ifall de angivna selektorerna finns i HTML-filen. Detta görs i en hierarki (därav namnet: 'Cascading' Style Sheet). En nackdel är dock att man faktiskt måste hämta denna CSS-fil innan ändringarna kan visas, till skillnad från inline CSS som redan finns inbakad i HTML-koden.
 		</p>
 		<aside>
-			<h2>Nyhetsbref</h2>
+			<h2>Nyhetsbrev</h2>
 			<form>
-				
+				<div>
+					<label for="name">Namn:</label> <input id="fName" name="name" placeholder="Ange namn här..." required="required" type="text">
+				</div>
+				<div>
+					<label for="email">Epost:</label><input id="email" name="email" placeholder="t.ex. anton@mah.se" type="text">
+				</div>
 			</form>
 		</aside>
 	</div>
