--- a/Malmö högskola/inlamning5.html
+++ b/Malmö högskola/inlamning5.html
@@ -39,12 +39,15 @@
 	<aside>
 			<h2>Nyhetsbrev</h2>
 			<form>
-				<div>
-					<label for="name">Namn:</label> <input id="fName" name="name" placeholder="Ange namn här..." required="required" type="text">
+				<fieldset>
+					<div>
+					<label for="name">Namn:</label> <input id="name" name="name" placeholder="Ange namn här..." required="required" type="text">
 				</div>
 				<div>
 					<label for="email">Epost:</label><input id="email" name="email" placeholder="t.ex. anton@mah.se" type="text">
 				</div>
+				</fieldset>
+				
 			</form>
 	</aside>
 	<footer>
