--- a/Malmö högskola/inlamning5.html
+++ b/Malmö högskola/inlamning5.html
@@ -19,13 +19,13 @@
 	</header>
 	</a>
 	<nav class="navbar">
-		<a href="/inlamning5_startsida.html">Start</a>
+		<a href="/inlamning5.html">Start</a>
 		<a href="/inlamning4_sida3.html">Om mig</a>
 		<a href="/Inlamning4_sida2.html">Om CSS</a>
 		<a href="/contact.html">Övrigt</a>
 	</nav>
 	<div class="body">
-		<h1>“inline” CSS eller externa stilmallar</h1>
+		<h1>“Inline” CSS i jämförelse med externa stilmallar</h1>
 		<p>
 			Man kan applicera CSS på HTML via inline CSS eller en extern stilmall. Inline CSS innebär att man lägger till "style" attributet (style="") direkt i HTML-koden, medan en användningen av en extern stilmall innebär att man har en seperat fil som hanterar all CSS-kod.
 		</p>
