--- a/Malmö högskola/inlamning5.html
+++ b/Malmö högskola/inlamning5.html
@@ -24,7 +24,8 @@
 		<a href="/Inlamning4_sida2.html">Om CSS</a>
 		<a href="/contact.html">Övrigt</a>
 	</nav>
-	<section class="body">
+	<div>
+		<section class="body">
 		<h1>“Inline” CSS i jämförelse med externa stilmallar</h1>
 		<p>
 			Man kan applicera CSS på HTML via inline CSS eller en extern stilmall. Inline CSS innebär att man lägger till "style" attributet (style="") direkt i HTML-koden, medan en användningen av en extern stilmall innebär att man har en seperat fil som hanterar all CSS-kod.
@@ -50,6 +51,8 @@
 				
 			</form>
 	</aside>
+	</div>
+	
 	<footer>
 		<p>Senast uppdaterad: 2020-03-05</p>
 	</footer>
