--- a/Malmö högskola/inlamning3.html
+++ b/Malmö högskola/inlamning3.html
@@ -102,7 +102,8 @@
 			<fieldset>
 				<legend>Skicka/Återställ</legend>
 				<div>
-					<input formaction="http://webshare.mah.se/tszagh/response.php" formmethod="GET" type="submit" value="Skicka"> <input style="margin-left: 10px" type="reset" value="Återställ formulär">
+					<input formaction="http://webshare.mah.se/tszagh/response.php" formmethod="GET" type="submit" value="Skicka">
+					<input style="margin-left: 10px" type="reset" value="Återställ formulär">
 				</div>
 			</fieldset>
 		</form>
