--- a/Malmö högskola/inlamning5.html
+++ b/Malmö högskola/inlamning5.html
@@ -41,13 +41,15 @@
 			<form>
 				<fieldset>
 					<h2>Nyhetsbrev</h2>
-					<div>
-					<label for="name">Namn:</label> <input id="name" name="name" placeholder="Ange namn här..." required="required" type="text">
+				<div>
+					<label for="name">Namn:</label> <input id="name" name="name" placeholder="Ange namn här..." type="text">
 				</div>
 				<div>
-					<label for="email">Epost:</label><input id="email" name="email" placeholder="t.ex. anton@mah.se" type="text">
+					<label for="email">Epost:</label><input id="email" name="email" placeholder="t.ex. anton@mah.se" type="text" required="required">
 				</div>
+				<div>
 				  <input type="submit" value="Skicka"> 
+				</div>
 				</fieldset>
 			</form>
 	</aside>
