--- a/Malmö högskola/index.html
+++ b/Malmö högskola/index.html
@@ -26,7 +26,7 @@
 			</div>
 		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
-	<div id="home">
+	<div class="container">
 		<h3 id="homeh3">HOME</h3>
 	</div>
 	<footer>
