--- a/Malmö högskola/index.html
+++ b/Malmö högskola/index.html
@@ -27,7 +27,7 @@
 		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
 	<div class="container">
-		<h3 id="homeh3">HOME</h3>
+		HOME
 	</div>
 	<footer>
 		<p>I'm a fancy footer. © FakeCompanyAB</p>
