--- a/Malmö högskola/inlamning6.html
+++ b/Malmö högskola/inlamning6.html
@@ -11,13 +11,7 @@
 	<a href="/index.html" style="text-decoration: none;">
 	<header>
 		<h1 id="headerh1">tbdevstuff</h1>
-		<ul>
-			<li>Inlämningsuppgift 5</li>
-			<li>Tarek Bermalm</li>
-			<li>AK6336</li>
-		</ul>
-	</header>
-	</a>
+	</header></a>
 	<div class="navbar">
 		<div class="dropdown">
 			<button class="dropbtn">Projects <label style="font-size: 15px;">▼</label></button>
