--- a/Malmö högskola/inlamning6.html
+++ b/Malmö högskola/inlamning6.html
@@ -26,9 +26,21 @@
 			</div>
 		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
-	<div class="container">
-		
-	</div>
+	<nav class="navbarSecondary">
+		 <ul>
+  			<li><a href="/inlamning1.html">Inlämning 1</a></li>
+			<li><a href="/Inlamning1_Del2.html">Inlämning 1 - Del 2</a></li>
+			<li><a href="/inlamning2.html">Inlämning 2</a></li>
+			<li><a href="/inlamning3.html">Inlämning 3</a></li>
+			<li><a href="/inlamning4.html">Inlämning 4</a></li>
+			<li><a href="/inlamning5.html">Inlämning 5</a></li>
+			<li><a href="/inlamning6.html">Inlämning 6</a></li>
+		</ul> 
+	</nav>	
+
+
+
+	s
 	<footer>
 		<p>Senast uppdaterad: 2020-03-05</p>
 	</footer>
