--- a/Malmö högskola/inlamning6.html
+++ b/Malmö högskola/inlamning6.html
@@ -29,6 +29,7 @@
 	<div class="container">
 		<div class="sidebar">
 			<nav class="navbarSecondary">
+				<h2>Menu</h2>
 				<ul>
 		  			<li><a href="/inlamning1.html">Inlämning 1</a></li>
 					<li><a href="/Inlamning1_Del2.html">Inlämning 1 - Del 2</a></li>
@@ -41,7 +42,8 @@
 			</nav>
 		</div>
 		<div class="mainContent">
-			<section>	
+			<section>
+			<h2>Content</h2>	
 			</section>
 		</div>
 	</div>
