--- a/Malmö högskola/Inlamning2.html
+++ b/Malmö högskola/Inlamning2.html
@@ -14,13 +14,15 @@
   </header></a>
   <div class="navbar">
     <div class="dropdown">
-      <button class="dropbtn">Projects <label style="font-size: 15px;">▼</label></button>
+      <button class="dropbtn">Projects <span>▼</span></button>
       <div class="dropdown-content">
         <a href="/inlamning1.html">Inlämning 1</a>
-        <a href="/Inlamning1_Del2.html">Inlämning 1 - Del 2</a>
+        <a href="/inlamning1_del2.html">Inlämning 1 - Del 2</a>
         <a href="/inlamning2.html">Inlämning 2</a>
         <a href="/inlamning3.html">Inlämning 3</a>
         <a href="/inlamning4.html">Inlämning 4</a>
+        <a href="/inlamning5.html">Inlämning 5</a>
+        <a href="/inlamning6.html">Inlämning 6</a>
       </div>
     </div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
   </div>
