--- a/Malmö högskola/inlamning6.html
+++ b/Malmö högskola/inlamning6.html
@@ -14,10 +14,10 @@
 	</header></a>
 	<div class="navbar">
 		<div class="dropdown">
-			<button class="dropbtn">Projects <label style="font-size: 15px;">▼</label></button>
+			<button class="dropbtn">Projects <span>▼</span></button>
 			<div class="dropdown-content">
 				<a href="/inlamning1.html">Inlämning 1</a>
-				<a href="/Inlamning1_Del2.html">Inlämning 1 - Del 2</a>
+				<a href="/inlamning1_del2.html">Inlämning 1 - Del 2</a>
 				<a href="/inlamning2.html">Inlämning 2</a>
 				<a href="/inlamning3.html">Inlämning 3</a>
 				<a href="/inlamning4.html">Inlämning 4</a>
