--- a/Malmö högskola/Inlamning2.html
+++ b/Malmö högskola/Inlamning2.html
@@ -44,7 +44,7 @@
   <tr>
   	<td>Kanye West</td>
     <td>Kanye West</td>
-    <td><img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Kanye_West_at_the_2009_Tribeca_Film_Festival-2_%28cropped%29.jpg" alt="kanye west"></td>
+    <td><img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Kanye_West_at_the_2009_Tribeca_Film_Festival-2_%28cropped%29.jpg" alt="kanye west" height="42" width="42"></td>
     <td>Jesus Is King</td>
     <td>USA</td>
     <td><a href="https://www.wikiwand.com/en/Kanye_West" style="color:white;">Wikipedia</a></td>
