--- a/Malmö högskola/Inlamning2.html
+++ b/Malmö högskola/Inlamning2.html
@@ -52,7 +52,7 @@
   <tr>
     <td>Michael Jackson</td>
     <td>Michael Jackson</td>
-    <td><a href="https://upload.wikimedia.org/wikipedia/commons/3/31/Michael_Jackson_in_1988.jpg">Omslagsbild</a></td>
+    <td><img src="https://upload.wikimedia.org/wikipedia/commons/3/31/Michael_Jackson_in_1988.jpg" alt="MJ" height="100" width="100"></td>
     <td>Invincible</td>
     <td>USA</td>
     <td><a href="https://www.wikiwand.com/en/Michael_Jackson">Wikipedia</a></td>
@@ -60,7 +60,7 @@
    <tr>
     <td>ABBA</td>
     <td>Agneta Fältskog, Benny Andersson, Anna-frid Lyngstad, Björn Ulvaeus</td>
-    <td><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/ABBA_Edmonton_1979_001.jpg/640px-ABBA_Edmonton_1979_001.jpg">Omslagsbild</a></td>
+    <td><img src=""https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/ABBA_Edmonton_1979_001.jpg/640px-ABBA_Edmonton_1979_001.jpg" alt="ABBA" height="100" width="100"></td>
     <td>The Visitors</td>
     <td>Sverige</td>
     <td><a href="https://www.wikiwand.com/en/ABBA" style="color:white;">Wikipedia</a></td>
