--- a/Malmö högskola/Inlamning2.html
+++ b/Malmö högskola/Inlamning2.html
@@ -63,12 +63,12 @@
     <td><img src=""https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/ABBA_Edmonton_1979_001.jpg/640px-ABBA_Edmonton_1979_001.jpg" alt="ABBA" height="100" width="100"></td>
     <td>The Visitors</td>
     <td>Sverige</td>
-    <td><a href="https://www.wikiwand.com/en/ABBA" style="color:white;">Wikipedia</a></td>
+    <td><img src="https://www.wikiwand.com/en/ABBA" style="color:white;">Wikipedia</a></td>
   </tr>
    <tr>
     <td>Ken Ring</td>
     <td>Ken Koprono Ringalias</td>
-    <td><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Ken_ring_crop.jpg/640px-Ken_ring_crop.jpg">Omslagsbild</a></td>
+    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Ken_ring_crop.jpg/640px-Ken_ring_crop.jpg" alt="KR" height="100" width="100"></td>
     <td>AkustiKen</td>
     <td>Sverige</td>
     <td><a id="nocoloration" href="https://www.wikiwand.com/en/Ken_Ring_(rapper)" style="color:white;">Wikipedia</a></td>
@@ -76,7 +76,7 @@
    <tr>
     <td>Darin</td>
     <td>Darin Zanyar</td>
-    <td><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/Darin2017.jpg/440px-Darin2017.jpg">Omslagsbild</a></td>
+    <td><img src=""https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/Darin2017.jpg/440px-Darin2017.jpg" alt="Darin" height="100" width="100"></td>
     <td>Tvillingen</td>
     <td>Sverige</td>
     <td><a href="https://www.wikiwand.com/en/Darin_Zanyar" style="color:white;">Wikipedia</a></td>
@@ -84,7 +84,7 @@
    <tr>
     <td>Yung Lean</td>
     <td>Jonatan Leandoer Håstad</td>
-    <td><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Yung_Lean_%2836469272325%29.jpg/440px-Yung_Lean_%2836469272325%29.jpg">Omslagsbild</a></td>
+    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Yung_Lean_%2836469272325%29.jpg/440px-Yung_Lean_%2836469272325%29.jpg" alt="Young Lean" height="100" width="100"></td>
     <td>Poision Ivy</td>
     <td>Sverige</td>
     <td><a href="https://www.wikiwand.com/en/Yung_Lean">Wikipedia</a></td>
@@ -92,7 +92,7 @@
    <tr>
     <td>Zara Larsson</td>
     <td>Zara Larsson</td>
-    <td><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Zara_Larsson_Upptr%C3%A4der_P%C3%A5_Sommarkrysset_2013_By_Daniel_%C3%85hs_Karlsson_%282%29.jpg/640px-Zara_Larsson_Upptr%C3%A4der_P%C3%A5_Sommarkrysset_2013_By_Daniel_%C3%85hs_Karlsson_%282%29.jpg">Omslagsbild</a></td>
+    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Zara_Larsson_Upptr%C3%A4der_P%C3%A5_Sommarkrysset_2013_By_Daniel_%C3%85hs_Karlsson_%282%29.jpg/640px-Zara_Larsson_Upptr%C3%A4der_P%C3%A5_Sommarkrysset_2013_By_Daniel_%C3%85hs_Karlsson_%282%29.jpg" alt="ZL" height="100" width="100"></td>
     <td>So Good</td>
     <td>Sverige</td>
     <td><a href="https://www.wikiwand.com/en/Zara_Larsson">Wikipedia</a></td>
@@ -100,7 +100,7 @@
    <tr>
     <td>Håkan Hellström</td>
     <td>Håkan Hellström</td>
-    <td><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/HaaakanEskilstuna.jpg/440px-HaaakanEskilstuna.jpg">Omslagsbild</a></td>
+    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/HaaakanEskilstuna.jpg/440px-HaaakanEskilstuna.jpg" </td>
     <td>Illusioner</td>
     <td>Sverige</td>
     <td><a href="https://www.wikiwand.com/en/H%C3%A5kan_Hellstr%C3%B6m">Wikipedia</a></td>
@@ -108,7 +108,7 @@
    <tr>
     <td>Wolfmother</td>
     <td>Andrew Stockdale, Hamish Rosser, Brad Heald</td>
-    <td><a href="//upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Deichbrand2018-Wolfmother-39.jpg/1280px-Deichbrand2018-Wolfmother-39.jpg">Omslagsbild</a></td>
+    <td><img src="//upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Deichbrand2018-Wolfmother-39.jpg/1280px-Deichbrand2018-Wolfmother-39.jpg" alt="WF" height="100" width="100"></td>
     <td>Rock'n'Roll Baby</td>
     <td>Australien</td>
     <td>https://www.wikiwand.com/en/Wolfmother</td>
@@ -116,7 +116,7 @@
    <tr>
     <td>Kylie Minogue</td>
     <td>Kylie Minogue</td>
-    <td><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c9/Kylie_Minogue_at_The_Queen%27s_Birthday_Party_%28cropped_3%29.jpg/440px-Kylie_Minogue_at_The_Queen%27s_Birthday_Party_%28cropped_3%29.jpg">Omslagsbild</a></td>
+    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c9/Kylie_Minogue_at_The_Queen%27s_Birthday_Party_%28cropped_3%29.jpg/440px-Kylie_Minogue_at_The_Queen%27s_Birthday_Party_%28cropped_3%29.jpg" alt="KM" height="100" width="100"></td>
     <td>Golden</td>
     <td>Australien</td>
     <td>https://www.wikiwand.com/en/Kylie_Minogue</td>
