--- a/Malmö högskola/Inlamning2.html
+++ b/Malmö högskola/Inlamning2.html
@@ -60,7 +60,7 @@
    <tr>
     <td>ABBA</td>
     <td>Agneta Fältskog, Benny Andersson, Anna-frid Lyngstad, Björn Ulvaeus</td>
-    <td><img src=""https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/ABBA_Edmonton_1979_001.jpg/640px-ABBA_Edmonton_1979_001.jpg" alt="ABBA" height="100" width="100"></td>
+    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/ABBA_Edmonton_1979_001.jpg/640px-ABBA_Edmonton_1979_001.jpg" alt="ABBA" height="100" width="100"></td>
     <td>The Visitors</td>
     <td>Sverige</td>
     <td><img src="https://www.wikiwand.com/en/ABBA" style="color:white;">Wikipedia</a></td>
@@ -76,7 +76,7 @@
    <tr>
     <td>Darin</td>
     <td>Darin Zanyar</td>
-    <td><img src=""https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/Darin2017.jpg/440px-Darin2017.jpg" alt="Darin" height="100" width="100"></td>
+    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/Darin2017.jpg/440px-Darin2017.jpg" alt="Darin" height="100" width="100"></td>
     <td>Tvillingen</td>
     <td>Sverige</td>
     <td><a href="https://www.wikiwand.com/en/Darin_Zanyar" style="color:white;">Wikipedia</a></td>
@@ -100,7 +100,7 @@
    <tr>
     <td>Håkan Hellström</td>
     <td>Håkan Hellström</td>
-    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/HaaakanEskilstuna.jpg/440px-HaaakanEskilstuna.jpg" </td>
+    <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/HaaakanEskilstuna.jpg/440px-HaaakanEskilstuna.jpg" alt="HH" height="100" width="100"></td>
     <td>Illusioner</td>
     <td>Sverige</td>
     <td><a href="https://www.wikiwand.com/en/H%C3%A5kan_Hellstr%C3%B6m">Wikipedia</a></td>
