--- a/Malmö högskola/Inlamning2.html
+++ b/Malmö högskola/Inlamning2.html
@@ -111,7 +111,7 @@
     <td><img src="//upload.wikimedia.org/wikipedia/commons/thumb/c/c4/Deichbrand2018-Wolfmother-39.jpg/1280px-Deichbrand2018-Wolfmother-39.jpg" alt="WF" height="100" width="100"></td>
     <td>Rock'n'Roll Baby</td>
     <td>Australien</td>
-    <td>https://www.wikiwand.com/en/Wolfmother</td>
+    <td><a href"https://www.wikiwand.com/en/Wolfmother>Wikipedia</td>
   </tr>
    <tr>
     <td>Kylie Minogue</td>
@@ -119,7 +119,7 @@
     <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c9/Kylie_Minogue_at_The_Queen%27s_Birthday_Party_%28cropped_3%29.jpg/440px-Kylie_Minogue_at_The_Queen%27s_Birthday_Party_%28cropped_3%29.jpg" alt="KM" height="100" width="100"></td>
     <td>Golden</td>
     <td>Australien</td>
-    <td>https://www.wikiwand.com/en/Kylie_Minogue</td>
+    <td><a href="https://www.wikiwand.com/en/Kylie_Minogue">Wikipedia</td>
   </tr>
 </tbody>
 </table> 
