--- a/Malmö högskola/inlamning4.html
+++ b/Malmö högskola/inlamning4.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Tarek Bermalm - Devstuff</title>
-	<link href="design.css" rel="stylesheet" type="text/css">
+	<link href="design_i4.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono:100,200,300,400,500,600" rel="stylesheet">
 </head>
@@ -26,6 +26,9 @@
 			</div>
 		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
+
+
+
 	<div class="navbarSecondary">
 	 	<a href="/inlamning4.html"><div>Sida 1</div></a>
 		<a href="/inlamning4_sida2.html"><div>Sida 2</div></a>
@@ -61,6 +64,9 @@
              	   -->
 		</ol>
 	</div>
+
+
+
 	<footer>
 		<p>I'm a fancy footer. © FakeCompanyAB</p>
 	</footer>
