--- a/Malmö högskola/inlamning4.html
+++ b/Malmö högskola/inlamning4.html
@@ -29,7 +29,8 @@
 
 
 
-	<div class="navbarSecondary" style="text-align: center; margin-top: 10px; text-decoration: none; font-size: 20px;">
+	<div class="navbarSecondary" style="text-align: center; margin-top: 10px; text-decoration: none; font-size: 20px; color: #000;
+">
 	 	<a href="/inlamning4.html"><div>Sida 1</div></a>
 		<a href="/inlamning4_sida2.html"><div>Sida 2</div></a>
 		<a href="/inlamning4_sida3.html"><div>Sida 3</div></a>
