--- a/Malmö högskola/inlamning4.html
+++ b/Malmö högskola/inlamning4.html
@@ -29,7 +29,7 @@
 
 
 
-	<div class="navbarSecondary" style="text-align: center; margin-top: 10px; text-decoration: none; font-size: 20px; color: #000;
+	<div style="text-align: center; margin-top: 10px; text-decoration: none; font-size: 20px; color: #000;
 ">
 	 	<a href="/inlamning4.html"><div>Sida 1</div></a>
 		<a href="/inlamning4_sida2.html"><div>Sida 2</div></a>
@@ -46,7 +46,7 @@
   	margin-left: auto;
   	margin-right: auto;
  	max-width: 100%;
- 	height: auto;"><label id="imgLabel" for="img">Förresten, bilden anpassar sig automatiskt till storleken på ditt fönster...</label>
+ 	height: auto;">
 		<h3 style="text-align: center; background: #096c3d; color: white; font-style: italic;">Ett par listor</h3>
 		<h4 style="text-align: center;">Ord</h4>
 		Lorem ipsum dolor sit amet.
