--- a/Malmö högskola/inlamning4.html
+++ b/Malmö högskola/inlamning4.html
@@ -35,7 +35,7 @@
 		<a href="/inlamning4_sida2.html"><div>Sida 2</div></a>
 		<a href="/inlamning4_sida3.html"><div>Sida 3</div></a>
 	</div>
-	<div id="main">
+	<div>
 		<h1 style="font-family:'Arial'; text-align: center; background: blue; color: white; color:white">Inlämning 1</h1>
 		<h2 style="text-align: center; border: 5px; border-style: solid; border-color: red; color: white; background: #096c3d;">Intro</h2>
 		<div class="textBody">
