--- a/Malmö högskola/inlamning4_sida3.html
+++ b/Malmö högskola/inlamning4_sida3.html
@@ -34,7 +34,7 @@
 		<a href="/inlamning4_sida2.html"><div>Sida 2</div></a>
 		<a href="/inlamning4_sida3.html"><div>Sida 3</div></a>
 	</div>
-	<div id="mainInlamning4">
+	<div>
 		<h1>Lorem ipsum</h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur semper imperdiet. Morbi dignissim at est ut feugiat. Vivamus blandit commodo massa eget pulvinar. Morbi ex quam, sagittis vitae metus fringilla, tristique aliquet risus. Duis consectetur dapibus purus vitae vulputate. In dapibus pretium massa consequat hendrerit. Quisque a magna lectus.</p>
 		<ul>
