--- a/Malmö högskola/inlamning4_sida3.html
+++ b/Malmö högskola/inlamning4_sida3.html
@@ -35,9 +35,9 @@
 		<a href="/inlamning4_sida3.html"><div>Sida 3</div></a>
 	</div>
 	<div>
-		<h1>Lorem ipsum</h1>
+		<h1 style="text-align: center;">Lorem ipsum</h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum efficitur semper imperdiet. Morbi dignissim at est ut feugiat. Vivamus blandit commodo massa eget pulvinar. Morbi ex quam, sagittis vitae metus fringilla, tristique aliquet risus. Duis consectetur dapibus purus vitae vulputate. In dapibus pretium massa consequat hendrerit. Quisque a magna lectus.</p>
-		<ul>
+		<ul style="padding: 10px; margin: 30px;">
 			<li>Integer metus nisi, aliquam quis diam sed, auctor molestie neque.</li>
 			<li>In hac habitasse platea dictumst. Sed dignissim condimentum pretium.</li>
 			<li>Nulla tincidunt enim eget erat molestie, eu vestibulum tortor efficitur.</li>
@@ -45,7 +45,9 @@
 		<p>Maecenas at quam accumsan, vehicula ante at, dignissim est. Praesent varius ultrices porttitor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla nisi ante, facilisis sit amet sapien in, suscipit placerat diam. Curabitur tempor lorem lacus, consectetur fermentum massa placerat at. Sed eleifend in erat nec sollicitudin. Suspendisse vitae gravida augue. Fusce dapibus tincidunt leo vel auctor.
 		</p>
 		
-		<table>
+		<table style="padding: 10px;
+	margin: 10px;
+	border-style: none;">
 			<tbody><tr>
 				<th>Morbi commodo</th>
 				<th>Semper tellus</th>
@@ -71,7 +73,7 @@
 				<td>ut turpis ex, sodales vitae</td>
 			</tr>
 		</tbody></table>
-		<h2>Pretium nec</h2>
+		<h2 style="text-align: center;">Pretium nec</h2>
 		<p>iaculis ac, mattis eu arcu. Morbi ultricies, diam ac aliquet porta, neque erat tincidunt nunc, vitae laoreet sapien nulla ut justo. Curabitur elementum eleifend dui a ultrices. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 	</div>
 	<footer>
