--- a/Malmö högskola/inlamning4_sida3_tmp.html
+++ b/Malmö högskola/inlamning4_sida3_tmp.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Tarek Bermalm - Devstuff</title>
-	<link href="design_i4.css" rel="stylesheet" type="text/css">
+	<link href="design.css" rel="stylesheet" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono:100,200,300,400,500,600" rel="stylesheet">
 </head>
