--- a/Malmö högskola/inlamning4_sida3.html
+++ b/Malmö högskola/inlamning4_sida3.html
@@ -61,10 +61,14 @@
 	margin: 10px;
 	border-style: none;">
 			<tbody><tr>
-				<th>Morbi commodo</th>
-				<th>Semper tellus</th>
-				<th>Vel dictum</th>
-				<th>Phasellus eu</th>
+				<th style="background-color: blue;
+	font-weight: bold">Morbi commodo</th>
+				<th style="background-color: blue;
+	font-weight: bold">Semper tellus</th>
+				<th style="background-color: blue;
+	font-weight: bold">Vel dictum</th>
+				<th style="background-color: blue;
+	font-weight: bold">Phasellus eu</th>
 			</tr>
 			<tr>
 				<td>arcu a nisi blandit pulvinar</td>
