--- a/Malmö högskola/inlamning4_sida3.html
+++ b/Malmö högskola/inlamning4_sida3.html
@@ -28,7 +28,7 @@
 	</div>
 
 
-	<div style="text-align: center; margin-top: 10px; text-decoration: none; font-size: 20px; color: #000;
+	<div style="text-align: center; margin-top: 10px; text-decoration: none; font-size: 20px; color: #000; background-color: black;
 ">
 	 	<a href="/inlamning4.html"><div>Sida 1</div></a>
 		<a href="/inlamning4_sida2.html"><div>Sida 2</div></a>
@@ -36,7 +36,7 @@
 	</div>
 	<div>
 		<h1 style="text-align: center;">Lorem ipsum</h1>
-		<p style="	border-color: white;
+		<p style="border-color: white;
 	border-width: 5px;
 	border-style: solid;
 	background-color: black;
