--- a/Malmö högskola/inlamning4_sida3.html
+++ b/Malmö högskola/inlamning4_sida3.html
@@ -30,7 +30,7 @@
 
 	<div style="text-align: center; margin-top: 10px; text-decoration: none; font-size: 20px; color: #000; background-color: black;
 ">
-		<H1>Meny</H1>
+		<H1 style="color: white;">Meny</H1>
 			 	<a href="/inlamning4.html"><div>Sida 1</div></a>
 		<a href="/inlamning4_sida2.html"><div style="margin-top: 10px;">Sida 2</div></a>
 		<a href="/inlamning4_sida3.html"><div>Sida 3</div></a>
