--- a/Malmö högskola/Inlamning4_Sida2.html
+++ b/Malmö högskola/Inlamning4_Sida2.html
@@ -35,7 +35,7 @@
 		<h1>Inlämning 1</h1>
 		<h2>Intro</h2>
 		
-		<h4 style=”font-weight: bold;”>Vad är CSS? Varför finns CSS? Hur använder vi oss av CSS?</h4>
+		<h4 style=”font-weight: bold; text-align: center;">Vad är CSS? Varför finns CSS? Hur använder vi oss av CSS?</h4>
 
 <p>CSS är ett programmeringsspråk. Det fulla namnet är Cascading Style Sheets. CSS är ett programmeringsspråk. I ett HTML element finns (antagningsvis) flera element. Dessa element avgör egentligen bara vad som ska visas. Exempelvis anger man med HTML att ett stycke text är en rubrik, medans en annan är en underrubrik. Det är alltså inte ett komplett verktyg för att skapa visuellt intresseväckande hemsidor. Denna roll fyller CSS. CSS bestämmer hur dessa element ska presenteras. Exempel på designjusteringar: storlek, färg, positionering, strukturella grundkoncept (hur element förhåller sig till varandra), typsnitt, typstil, bokstavsmellanrum, bakgrundsfärg, bakgrundsbild, URL stil, listor, datatabeller, stil på datatabellernas väggar, bildstorlek, elementavstånd, genomskinlighet och så vidare.
 En annan fördel att använda sig av CSS är att man tillåter en fördelning mellan innehåll och utformning av innehållet. Detta möjliggör att flera dokument kan dela samma stilangivelser, utan att behöva upprepa dessa stilangiveler i varje dokumet. Detta görs genom en referens till ett och samma CSS-dokument. I och med detta kan man även göra ändringar och uppdatera innehållet på sin hemsida mer koncist, genom att helt enkelt ändra i CSS dokumentet. På grund av att struktur och design är seperat sker designändringen på alla dokument som pekar till det aktuella CSS dokumentet som det görs ändringar i.
