--- a/Malmö högskola/inlamning4.html
+++ b/Malmö högskola/inlamning4.html
@@ -27,9 +27,10 @@
 		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
 
-	<div style="text-align: center; margin-top: 10px; text-decoration: none; font-size: 20px; color: #000;
+	<div style="text-align: center; margin-top: 10px; text-decoration: none; font-size: 20px; color: #000; background-color: black;
 ">
-	 	<a href="/inlamning4.html"><div>Sida 1</div></a>
+		<H1 style="color: white;">Meny</H1>
+			 	<a href="/inlamning4.html"><div>Sida 1</div></a>
 		<a href="/inlamning4_sida2.html"><div>Sida 2</div></a>
 		<a href="/inlamning4_sida3.html"><div>Sida 3</div></a>
 	</div>
