--- a/Malmö högskola/Inlamning4_Sida2.html
+++ b/Malmö högskola/Inlamning4_Sida2.html
@@ -26,16 +26,16 @@
 			</div>
 		</div><a href="/contact.html">Contact</a> <a href="/index.html">Home</a>
 	</div>
-	<div class="navbarSecondary">
-	 	<a href="/inlamning4.html"><div>Sida 1</div></a>
+	<div style="text-align: center; margin-top: 10px; text-decoration: none; font-size: 20px; color: #000; background-color: black;
+">
+		<H1 style="color: white;">Meny</H1>
+			 	<a href="/inlamning4.html"><div>Sida 1</div></a>
 		<a href="/inlamning4_sida2.html"><div>Sida 2</div></a>
 		<a href="/inlamning4_sida3.html"><div>Sida 3</div></a>
 	</div>
-	<div id="main">
-		<h1>Inlämning 1</h1>
-		<h2>Intro</h2>
+	
 		
-		<h4 style=”font-weight: bold; text-align: center;">Vad är CSS? Varför finns CSS? Hur använder vi oss av CSS?</h4>
+		<div style="background-color: black;"><h4 style="text-align: center; font-weight: bold;">Vad är CSS? Varför finns CSS? Hur använder vi oss av CSS?</h4></div>
 
 <p>CSS är ett programmeringsspråk. Det fulla namnet är Cascading Style Sheets. CSS är ett programmeringsspråk. I ett HTML element finns (antagningsvis) flera element. Dessa element avgör egentligen bara vad som ska visas. Exempelvis anger man med HTML att ett stycke text är en rubrik, medans en annan är en underrubrik. Det är alltså inte ett komplett verktyg för att skapa visuellt intresseväckande hemsidor. Denna roll fyller CSS. CSS bestämmer hur dessa element ska presenteras. Exempel på designjusteringar: storlek, färg, positionering, strukturella grundkoncept (hur element förhåller sig till varandra), typsnitt, typstil, bokstavsmellanrum, bakgrundsfärg, bakgrundsbild, URL stil, listor, datatabeller, stil på datatabellernas väggar, bildstorlek, elementavstånd, genomskinlighet och så vidare.
 En annan fördel att använda sig av CSS är att man tillåter en fördelning mellan innehåll och utformning av innehållet. Detta möjliggör att flera dokument kan dela samma stilangivelser, utan att behöva upprepa dessa stilangiveler i varje dokumet. Detta görs genom en referens till ett och samma CSS-dokument. I och med detta kan man även göra ändringar och uppdatera innehållet på sin hemsida mer koncist, genom att helt enkelt ändra i CSS dokumentet. På grund av att struktur och design är seperat sker designändringen på alla dokument som pekar till det aktuella CSS dokumentet som det görs ändringar i.
@@ -43,8 +43,7 @@ En till fördel är kortare laddningstider av hemsidor. I och med att designangi
 
 <p>För att använda sig av dessa verktyg så behöver man minst två filer. Ett HTML-dokument med innehåll såsom rubriker, textstycken, bilder, underrubriker och så vidare. Den andra filen som behövs är ett CSS-dokument som innehåller bestämmelser om hur just dessa element ska utformas. Mer specifikt behöver man referera till ett eller flera element och därefter ange en stilangivelse såsom text-storlek. Ifall man har dessa två filer behöver de kopplas samman, vilket görs via en referens i html-dokumentet som anger namnet på CSS dokumentet samt var filen kan hittas.<p>
 
-<p>Det finns olika versioner av CSS. Vilka versioner finns det? Varför finns det olika versioner? (Varför är det inte bara en?) Varför är det viktigt att veta vilken version som en viss CSS-egenskap tillhör? (Kan detta påverka webbplatsen?)</p>
-
+<div style="background-color: black;"><h4 style="text-align: center; font-weight: bold;">Det finns olika versioner av CSS. Vilka versioner finns det? Varför finns det olika versioner? (Varför är det inte bara en?) Varför är det viktigt att veta vilken version som en viss CSS-egenskap tillhör? (Kan detta påverka webbplatsen?)</h4></div>
 
 <p>Mjukvara, ofta mer än andra ämnen, är i regel i ett tillstånd av kontinuerlig utveckling. Detta stämmer även för programmeringsspråk, varav CSS inte är ett undantag. Konstant förändring hos programmeringsspråken sker parallelt med en bredare teknologisk utveckling. Om detta samband rör sig om orsak eller helt enkelt korrelation är osäkert. I vilket fall har utvecklingen lett till tre versioner av CSS. Dessa kallas helt enkelt CSS1, CSS2, och CSS3.</p>
 
