--- a/Malmö högskola/contact.html
+++ b/Malmö högskola/contact.html
@@ -27,6 +27,9 @@
 	<div id="main">
 		<h3>Contact</h3>
 	</div>
+	<div>
+		For job inquiries contact me at fake@mail.com.
+	</div>
 	<footer>
 		<p>I'm a fancy footer. © FakeCompanyAB</p>
 	</footer>
