--- a/Malmö högskola/inlamning5.html
+++ b/Malmö högskola/inlamning5.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
 	<meta charset="UTF-8">
 	<title>Tarek Bermalm - Devstuff</title>
@@ -16,45 +16,34 @@
 			<li>Tarek Bermalm</li>
 			<li>AK6336</li>
 		</ul>
-	</header>
-	</a>
+	</header></a>
 	<nav class="navbar">
-		<a href="/inlamning5.html">Start</a>
-		<a href="/inlamning4_sida3.html">Om mig</a>
-		<a href="/Inlamning4_sida2.html">Om CSS</a>
-		<a href="/contact.html">Övrigt</a>
+		<a href="/inlamning5.html">Start</a> <a href="/inlamning4_sida3.html">Om mig</a> <a href="/Inlamning4_sida2.html">Om CSS</a> <a href="/contact.html">Övrigt</a>
 	</nav>
 	<div class="container">
 		<section>
-		<h1>“Inline” CSS i jämförelse med externa stilmallar</h1>
-		<p>
-			Man kan applicera CSS på HTML via inline CSS eller en extern stilmall. Inline CSS innebär att man lägger till "style" attributet (style="") direkt i HTML-koden, medan en användningen av en extern stilmall innebär att man har en seperat fil som hanterar all CSS-kod.
-		</p>
-		<p>
-			Fördelen med inline CSS är att man kan lättare och direkt applicera ändringar på text. Man behöver heller inte ta hänsyn till selektorer (t.ex. id eller class), alltså till vad som koden ska appliceras på (detta görs alltid, om man använder en extern stilmall). Denna fördel kommer automatiskt med en gigantisk nackdel - att man måste applicera CSS på varje enskilt element. Koden blir snabbt rörig och svårt att underhålla.	Just denna nackdel är vad en extern stilmall tar hand om.
-		</p>
-		<p>
-			Om man använder sig av en extern stillmall så behöver man som sagt ange en selektor. Det ända du behöver för att denna selektor ska kunna vara aktuell för en HTML-fil är att ange en referens till CSS-filen. Då kommer automatiskt alla ändringar att tillämpas, ifall de angivna selektorerna finns i HTML-filen. Detta görs i en hierarki (därav namnet: 'Cascading' Style Sheet). En nackdel är dock att man faktiskt måste hämta denna CSS-fil innan ändringarna kan visas, till skillnad från inline CSS som redan finns inbakad i HTML-koden.
-		</p>
-	</section>
-	<aside>
+			<h1>“Inline” CSS i jämförelse med externa stilmallar</h1>
+			<p>Man kan applicera CSS på HTML via inline CSS eller en extern stilmall. Inline CSS innebär att man lägger till "style" attributet (style="") direkt i HTML-koden, medan en användningen av en extern stilmall innebär att man har en seperat fil som hanterar all CSS-kod.</p>
+			<p>Fördelen med inline CSS är att man kan lättare och direkt applicera ändringar på text. Man behöver heller inte ta hänsyn till selektorer (t.ex. id eller class), alltså till vad som koden ska appliceras på (detta görs alltid, om man använder en extern stilmall). Denna fördel kommer automatiskt med en gigantisk nackdel - att man måste applicera CSS på varje enskilt element. Koden blir snabbt rörig och svårt att underhålla. Just denna nackdel är vad en extern stilmall tar hand om.</p>
+			<p>Om man använder sig av en extern stillmall så behöver man som sagt ange en selektor. Det ända du behöver för att denna selektor ska kunna vara aktuell för en HTML-fil är att ange en referens till CSS-filen. Då kommer automatiskt alla ändringar att tillämpas, ifall de angivna selektorerna finns i HTML-filen. Detta görs i en hierarki (därav namnet: 'Cascading' Style Sheet). En nackdel är dock att man faktiskt måste hämta denna CSS-fil innan ändringarna kan visas, till skillnad från inline CSS som redan finns inbakad i HTML-koden.</p>
+		</section>
+		<aside>
 			<form>
 				<fieldset>
 					<h2>Nyhetsbrev</h2>
-				<div>
-					<label for="name">Namn:</label> <input id="name" name="name" placeholder="Ange namn här..." type="text">
-				</div>
-				<div>
-					<label for="email">Epost:</label><input id="email" name="email" placeholder="t.ex. anton@mah.se" type="text" required="required">
-				</div>
-				<div>
-				  <input type="submit" value="Skicka"> 
-				</div>
+					<div>
+						<label for="name">Namn:</label> <input id="name" name="name" placeholder="Ange namn här..." type="text">
+					</div>
+					<div>
+						<label for="email">Epost:</label><input id="email" name="email" placeholder="t.ex. anton@mah.se" required="required" type="text">
+					</div>
+					<div>
+						<input type="submit" value="Skicka">
+					</div>
 				</fieldset>
 			</form>
-	</aside>
+		</aside>
 	</div>
-	
 	<footer>
 		<p>Senast uppdaterad: 2020-03-05</p>
 	</footer>
