--- a/Malmö högskola/inlamning5_Ommig.html
+++ b/Malmö högskola/inlamning5_Ommig.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono:100,200,300,400,500,600" rel="stylesheet">
 </head>
-<body class="inlamning4" class="inlamning5">
+<body class="inlamning5">
 		<a href="/index.html" style="text-decoration: none;">
 	<header>
 		<h1 id="headerh1">tbdevstuff</h1>
@@ -20,6 +20,7 @@
 	<nav class="navbar">
 		<a href="/inlamning5.html">Start</a> <a href="/inlamning5_ommig.html">Om mig</a> <a href="/Inlamning5_omcss.html">Om CSS</a> <a href="/inlamning5_ovrigt.html">Övrigt</a>
 	</nav>
+	<div class="inlamning4">
 	<div style="text-align: center; margin-top: 10px; text-decoration: none; font-size: 20px; color: #000; background-color: black;">
 		<h1 style="color: white;">Meny</h1><a href="/inlamning4.html">
 		<div>
@@ -63,6 +64,7 @@
                    -->
 		</ol>
 	</div>
+</div>
 	<footer>
 		<p>I'm a fancy footer. © FakeCompanyAB</p>
 	</footer>
