--- a/Malmö högskola/inlamning5_ovrigt.html
+++ b/Malmö högskola/inlamning5_ovrigt.html
@@ -21,13 +21,8 @@
 		<a href="/inlamning5.html">Start</a> <a href="/inlamning5_ommig.html">Om mig</a> <a href="/Inlamning5_omcss.html">Om CSS</a> <a href="/inlamning5_ovrigt.html">Övrigt</a>
 	</nav>
 	<div class="container">
-	<div id="main">
-		<h3>Contact</h3>
+		<h3>Contact</h3>For job inquiries contact me at fake@mail.com.
 	</div>
-	
-		For job inquiries contact me at fake@mail.com.
-	
-</div>
 	<footer>
 		<p>I'm a fancy footer. © FakeCompanyAB</p>
 	</footer>
