--- a/Malmö högskola/inlamning6.html
+++ b/Malmö högskola/inlamning6.html
@@ -7,10 +7,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Fira+Mono:100,200,300,400,500,600" rel="stylesheet">
 </head>
-<body class="inlamning6">
+<body>
 	<div class="container">
 		<div class="sidebar">
-			<nav class="navbarSecondary">
+			<nav>
 				<h2>Menu</h2>
 				<ul>
 		  			<li><a href="/inlamning1.html">Inlämning 1</a></li>
