--- a/Malmö högskola/test.html
+++ b/Malmö högskola/test.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="sidebar">
 		<header>
-			i6
+			Meny
 		</header>
 		<ul>
 		  			<li><a href="/inlamning1.html">Inlämning 1</a></li>
